# AdventOfCode2025

./: .gitignore  README.md
csuhj/day1/: part1.py  part2.py
csuhj/day2/: part1.py  part2.py
csuhj/day3/: part1.py  part2.py
csuhj/day4/: part1.py  part2.py
csuhj/day5/: part1.py  part2.py
csuhj/day6/: part1.py  part2.py
sam/day1/: part1.py  part2.py
sam/day1a/: solve.py
sam/day2/: part1.py  part2.py
sam/day3/: part1.py  part2.py
sam/day4/: part1.py  part2.py
timmo/: Notes.md  day00.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  pyproject.toml
