[tool.poetry]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = ["Tim Morris <35537687+TimoMorris@users.noreply.github.com>"]
readme = "Notes.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
